--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,10 +1,10 @@
-/* styles.css */
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 20px;
     background: linear-gradient(to bottom right, #51005f, #2472f8);
-    color: #f8f9fa; /* Light text color */
+    color: #f8f9fa; 
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -46,5 +46,5 @@ button:hover {
     border-radius: 10px;
     margin-top: 20px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 500px; /* Limit text container width */
+    max-width: 500px; 
 }
